src/objects/T_Route__c.object
<CustomObject>
    <fields>
        <fullName>Default_Address__c</fullName>
        <label>Default Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Driver</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>T_Routes</relationshipLabel>
        <relationshipName>T_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_End_Time__c</fullName>
        <label>Default_End_Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Start_Time__c</fullName>
        <label>Default_Start_Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Vehicle</label>
        <referenceTo>T_Vehicle__c</referenceTo>
        <relationshipLabel>T_Routes</relationshipLabel>
        <relationshipName>T_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Location</label>
        <referenceTo>Service_Location__c</referenceTo>
        <relationshipLabel>T_Routes</relationshipLabel>
        <relationshipName>T_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Common Pickup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Dropoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>T_Route</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_Routes</pluralLabel>
    <recordTypes>
        <fullName>ADH</fullName>
        <active>true</active>
        <label>ADH</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>